Avoid vertical scrollbar in popups

--- a/egw_fw.css
+++ b/egw_fw.css
@@ -12,8 +12,11 @@
 html, body {
 	margin: 0px !important;
 	padding: 0px !important;
-	height: 100% !important;
 	width: 100% !important;
+}
+
+body {
+	height: 99% !important;
 }
 
 #egw_fw_basecontainer {
